# soldeer-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.sqlx/: query-05135dce719b1486943a14d8977c563385cf3e098e9c64ef6417701ccbc291c5.json  query-0a0ab228fb7ecd5f20a299db37804f07544c7bc72a28eedd3dd5e3906e657e8f.json  query-0b42f5f28cc4f282bd2fe5dd634ce0e59cc97fcc7370896b1c86070dce92bcd2.json  query-14b5f7a84b11c7094c4cc1fc251bcd5574ae3e7c6df98608b7afb4cc0acd39b1.json  query-15275c7f3990fb4e2ea60dae93e00133bf9419f743be6f8d13565df827e93a17.json  query-1d30de85d1ecb3345ce966fdd3dc35bed5277190ffceafaf0346ffa8f39a4785.json  query-1fd35edaffcf6fa15e12928ec9fa66781896eb1b01d435f5087b7d1802f8de86.json  query-280238921c718dafae5aafb0cec101331404f83c4ea464d2732086559616945f.json  query-2fd92d70b9dc0a8bebec9f88a317cf90c8f36bce33dba2c33dddb2e2a5b14e05.json  query-3046824b39ed7e50cbc2a2dce72fa7d52532f2f655c919941351092653bce3fc.json  query-38117d5731bad161493f4fdcd7cf7474b049bee8cf2a659f408a6848fc0f8427.json  query-489145f26fa97d9901189b72a178dd956b74fb9f3afd79367e98ccf76d6480ab.json  query-497e875c85eb2a72775a72727ddecf8e5fe66f132981c36fdb5f6571bdcd8bce.json  query-55a081485a24510fed5e5c5439fa7516c0f711de5263fed52558bd39de2ee75a.json  query-5734995c162ba0f8af155e52ae8126f3a6feaf712c05e69dd1700e5b2c910e70.json  query-597b7bc15b5bdc641c8c160910853f7db60caae1c5b57b912d43c6b0035d676f.json  query-6709c87a533fbe05a85ece83c0b6d58d57cccae8ed7b929d62d12d0c111c195b.json  query-6f314f33a6017d88749a943bf8e1f10277301ebcd3112739230b5626b0e77859.json  query-82250a98edb51f8aa5c55b94883169be014bad0c83fff61d268f39c406866721.json  query-824b286f84da55472eb3f6e2352312ad4b1fe79e530819fa629b4922676e81c0.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-91161968fc557cb3fe503a6113ad14136cfcabbd84b6fa0da4aab0de41ebc2b0.json  query-9dbeaef381967d9d32234bf5eb81665e4807d17215516c3aa8e4e0b4f2bbef1b.json  query-a3f8f30ad826ed5cbb361d721040f864c51cabd4c6d404f5a4ba92e28ea7a43d.json  query-a71f167d89331e6dfd835135bb2187e0a5bb737270e70796d861034a05c844b4.json  query-a745049b1811b752d10076883235b9d43203ab3cd491fecc7a6f9b84bb5797fc.json  (+10 more)
src/: config.rs  handler.rs  (+7 more)
(+19 files in other folders)
