[package]
name = "soldeer-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
aws-config = "1.1.1"
aws-sdk-s3 = "1.11.0"
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["cookie"] }
axum_typed_multipart = "0.11.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
email-address-parser = "2.0.0"
jsonwebtoken = "9.2.0"
passwords = "3.1.16"
rand_core = { version = "0.6.4", features = ["std"] }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
time = "0.3.30"
tokio = { version = "1.35.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
